--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>One-Person IT & IAM for Startups</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Remote IT & IAM contractor helping US startups run secure, scalable IT.">
+  <meta name="description" content="Remote IT & IAM contractor helping startups and small business manage identity, SaaS, and security without full-time headcount.">
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
@@ -16,25 +16,62 @@
     }
     h1 { font-size: 2.2em; }
     h2 { margin-top: 2em; }
-    a { color: #0057ff; text-decoration: none; }
+
+    a {
+      color: #0057ff;
+      text-decoration: none;
+    }
+
+    .buttons {
+      margin-top: 24px;
+    }
+
     a.button {
       display: inline-block;
-      margin-top: 20px;
+      margin: 10px 10px 0 0;
       padding: 12px 20px;
       border: 1px solid #0057ff;
       border-radius: 6px;
+      color: #0057ff;
+      font-weight: 500;
+    }
+
+    a.button.primary {
+      background-color: #0057ff;
+      color: #fff;
+    }
+
+    a.button.secondary {
+      border-color: #999;
+      color: #333;
+    }
+
+    a.button:hover {
+      opacity: 0.9;
     }
   </style>
 </head>
 <body>
 
-<h1>One-Person IT & IAM for US Startups</h1>
+<h1>One-Person IT & IAM for Startups</h1>
 
-<p>I help small, remote-first US companies run secure, scalable IT without hiring a full internal team.</p>
+<p>I help small, remote-first companies run secure, scalable IT without hiring a full internal team.</p>
 
-<a class="button" href="mailto:youremail@example.com">Contact me</a>
+<div class="buttons">
+  <a class="button primary" href="https://calendar.app.google/vverzYajXJ9RC8j86" target="_blank">
+    Book a 15-min intro
+  </a>
 
-<h2>What I Do</h2>
+  <a class="button secondary" href="https://www.linkedin.com/in/iuri-rocco-20aa0428/?locale=en_US" target="_blank">
+    LinkedIn
+  </a>
+
+  <a class="button secondary" href="mailto:iuri@rocco-tech.com">
+    Email
+  </a>
+</div>
+
+<h2>What I Own</h2>
 <ul>
   <li>Identity & access management (Okta, Google Workspace, SaaS)</li>
   <li>Joiner / mover / leaver workflows</li>
@@ -51,6 +88,28 @@
 
 <h2>Background</h2>
 <p>Previously supported global teams at Indeed and Netskope.</p>
+
+<h2>Not a Fit If</h2>
+<ul>
+  <li>You need 24/7 helpdesk coverage</li>
+  <li>You are looking for a body-shop or staff augmentation</li>
+  <li>You need visa sponsorship or payroll employment</li>
+</ul>
+
+<!-- Final Call to Action -->
+<div class="buttons">
+  <a class="button primary" href="https://calendar.app.google/vverzYajXJ9RC8j86" target="_blank">
+    Book a 15-min intro
+  </a>
+
+  <a class="button secondary" href="https://www.linkedin.com/in/iuri-rocco-20aa0428/?locale=en_US" target="_blank">
+    LinkedIn
+  </a>
+
+  <a class="button secondary" href="mailto:iuri@rocco-tech.com">
+    Email
+  </a>
+</div>
 
 </body>
 </html>
