--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <section class="hero">
             <div class="badge" data-aos="fade-down">Available for Q1 2026 Projects</div>
             <h1 data-aos="fade-up" data-aos-delay="100">Identity, Access, and Security Operations — done right.</h1>
-            <p data-aos="fade-up" data-aos-delay="200">I help remote-first startups scale secure IT infrastructure without the overhead of a full-time team. Ex-Indeed & Netskope.</p>
+            <p data-aos="fade-up" data-aos-delay="200">I help remote-first startups scale secure IT infrastructure without the overhead of a full-time team. </p>
             
             <div class="btn-group" data-aos="fade-up" data-aos-delay="300">
                 <a href="https://calendar.app.google/vverzYajXJ9RC8j86" target="_blank" class="btn btn-primary">
